# arp-demo

./: .gitignore  Dockerfile  README.md  conftest.py  setup.cfg
arpdemo/: config.py  helper.py  main.py
docs/: ARP_NER_Labeling.drawio
tests/: test_config.py  test_main.py
