[metadata]
name = arpdemo
version = 0.0.1
description = arpdemo
long_description = file: README.md
keywords = recipe, NER, microservices, FastAPI
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiofile
    fastapi
    loguru
    uvicorn[standard]
    pydantic
    requests
    python-multipart  # for multipart requests

[options.extras_require]
dev =
    pytest
    pylint